<resources>
    <string name="app_name">ICS</string>
    <string name="facebook_app_id">164149868341890</string>
    <string name="fb_login_protocol_scheme">fb164149868341890</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="verification">Verification</string>
    <string name="enter_code">Enter 6 digit code</string>
    <string name="Phone">Ph</string>
    <string name="send_to_TEXT">we sent to </string>
    <string name="wrong_number">wrong number?</string>
    <string name="resend_code_TEXT">Resend code in 00:32 sec</string>
    <string name="num_users_black">340</string>
    <string name="num_users_lgtb">340 </string>
    <string name="users_TEXT">Users</string>
    <string name="add_new_community_BUTTON">Add new community</string>
    <string name="continue_BUTTON">Continue</string>
    <string name="zipcode">Zipcode: 92618</string>
    <string name="state">State: Washington</string>
    <string name="your_communities">Your Communities</string>
    <string name="verification__successful">The verification was successful!</string>
    <string name="sign_up_button_facbook_TEXT">Facebook</string>
    <string name="sign_up_button_gmail_TEXT">Gmail</string>
    <string name="sigi_up_or_TEXT">OR</string>
    <string name="sign_up_button_email_TEXT">Email</string>
    <string name="sigi_up_skip_TEXT">Skip</string>
    <string name="sign_up_already_account_TEXT">Already have an account?</string>
    <string name="sign_up_log_in_TEXT"> <u>Log in</u></string>
    <string name="SignUpviaEmail">Sign Up via Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
    <string name="gmail">Gmail</string>
    <string name="facebook">Facebook</string>
    <string name="or_log_in_with">OR log in with</string>
    <string name="sing_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="log_in"> <u>Log in</u></string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="please_choose_a_country_and_enter_your_mobile_phone_number_below">Please choose a country and enter your mobile phone number below</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="send_code">Send code</string>
    <string name="choose_community">Choose Community</string>
    <string name="jewish_community">Jewish Community</string>
    <string name="black_community">Black Community</string>
    <string name="lgtb">LGTB</string>
    <string name="where">Where?</string>
    <string name="the_verification_was_successful">The verification was successful</string>
    <string name="sayfer">Sayfer</string>
</resources>
