<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SingUpViaEmailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:orientation="vertical"
    tools:context=".controller.usermanagement.SignUpViaEmailFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="134" />

    <TextView
        android:id="@+id/F_SUVE_titel_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/SignUpviaEmail"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_very_big"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30" />


    <EditText
        android:id="@+id/F_SUVE_email_ET"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="67"
        android:background="@drawable/suve_edit_text_background"
        android:drawableStart="@drawable/ic_home_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="@dimen/text_size_medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />

    <EditText
        android:id="@+id/F_SUVE_password_ET"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="67"
        android:background="@drawable/suve_edit_text_background"
        android:drawableStart="@drawable/ic_home_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="@dimen/text_size_medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/F_SUVE_logIn_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/log_in"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="48" />

    <Button
        android:id="@+id/F_SUVE_singUp_BU"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_big"
        android:background="@color/grey"
        android:text="@string/sing_up"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_big" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="34" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@color/greyDark" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/or_log_in_with"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/greyDark" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16" />

    <Button
        android:id="@+id/F_SUVE_Facebook_BU"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_big"
        android:background="@color/grey"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_big" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="17" />

    <Button
        android:id="@+id/F_SUVE_gmail_BU"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_big"
        android:background="@color/grey"
        android:text="@string/gmail"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_big" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35" />

    <TextView
        android:id="@+id/F_SUVE_skip_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/assistant_semibold"
        android:text="@string/skip"
        android:textColor="@color/marine"
        android:textSize="@dimen/text_size_big" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="91" />


</LinearLayout>