<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_screen"
    android:paddingEnd="@dimen/padding_screen"
    tools:context=".controller.main.ui.home.VerificationCodeFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="53" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_very_big"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/verification" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="visible"
        android:text="@string/enter_code" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to_TEXT"
            android:visibility="visible"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:visibility="visible"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text=" +972 53492834" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/marine"
        android:visibility="visible"
        android:text="@string/wrong_number" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="23" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:visibility="visible"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

      <EditText
          android:id="@+id/verification_smsCode_ET"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/grey"
          android:inputType="number"
          android:maxLength="6"
          android:textSize="@dimen/text_size_very_big"
          android:textStyle="bold"
          android:textColor="@android:color/black"
          android:gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="47" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_code_TEXT"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/greyLight" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="120" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/verification_continue_BUTTON"
        android:textAllCaps="false"
        android:text="@string/continue_BUTTON"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        android:background="@color/marine"
        android:layout_weight="50" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />

</LinearLayout>