<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_screen"
    android:paddingEnd="@dimen/padding_screen"
    android:orientation="vertical"
    tools:context=".controller.main.ui.home.VerificationSuccessfulFragment">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="53"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_very_big"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/verification" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="visible"
        android:text="@string/the_verification_was_successful" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="81"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_round"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="188"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/verification_continue_BUTTON"
        android:textAllCaps="false"
        android:text="@string/continue_BUTTON"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        android:background="@color/marine"
        android:layout_weight="50"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>




</LinearLayout>