<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_screen"
    android:paddingEnd="@dimen/padding_screen"
    android:layout_height="match_parent"
    tools:context=".controller.main.ui.home.YourCommunitiesFragment">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="92"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_communities"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_big"
        android:layout_gravity="center_horizontal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="240"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:id="@+id/my_communiuies_RV">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="62"
        android:id="@+id/your_Communities_add_new_BUTTON"
        android:textAllCaps="false"
        android:textColor="@color/marine"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_medium"
        android:background="@drawable/rectangle_blue"
        android:text="@string/add_new_community_BUTTON"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="270"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/your_Communities_continue_BUTTON"
        android:textAllCaps="false"
        android:text="@string/continue_BUTTON"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        android:background="@color/marine"
        android:layout_weight="52"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="49"/>

</LinearLayout>